feat: fix dashboards sessions and start treinere instance