@@ -9,13 +9,13 @@ import com.studere.studerejava.framework.models.Plan;
 import com.studere.studerejava.framework.models.PlanItem;
 import com.studere.studerejava.framework.models.dto.request.PlanAiGenerateDTO;
 import com.studere.studerejava.framework.models.dto.request.PlanCreateOrUpdateDTO;
+import com.studere.studerejava.framework.models.dto.request.PlanItemDTO;
 import com.studere.studerejava.framework.repositories.PlanRepository;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public abstract class PlanService<T extends Plan, U extends PlanItem> {
     protected final PlanRepository<T> planRepository;
@@ -36,21 +36,31 @@ public abstract class PlanService<T extends Plan, U extends PlanItem> {
 
     protected abstract String generatePrompt(String input);
 
-    public T createPlan(PlanCreateOrUpdateDTO planCreateOrUpdateDTO, UUID userId) {
-        T newPlan = createNewPlan();
+    protected T setPlanFieldsFromDTO(PlanCreateOrUpdateDTO<? extends PlanItemDTO> planCreateOrUpdateDTO, T plan, UUID userId) {
         Module module = moduleService.findModuleById(planCreateOrUpdateDTO.getModuleId(), userId);
+        plan.setTitle(planCreateOrUpdateDTO.getTitle());
+        plan.setModule(module);
+        return plan;
+    }
 
-        newPlan.setTitle(planCreateOrUpdateDTO.getTitle());
-        newPlan.setModule(module);
-
-
-        newPlan.setPlanItems(planCreateOrUpdateDTO.getItems().stream().map(item -> {
+    protected void addPlanItemsFromDTO(PlanCreateOrUpdateDTO<? extends PlanItemDTO> planCreateOrUpdateDTO, T plan) {
+        plan.getPlanItems().clear();
+        plan.getPlanItems().addAll(planCreateOrUpdateDTO.getItems().stream().map(item -> {
             U planItem = createNewPlanItem();
             planItem.setTitle(item.getTitle());
             planItem.setDescription(item.getDescription());
-            planItem.setPlan(newPlan);
+            planItem.setPlan(plan);
             return planItem;
-        }).collect(Collectors.toList()));
+        }).toList());
+    }
+
+    public T createPlan(PlanCreateOrUpdateDTO planCreateOrUpdateDTO, UUID userId) {
+        Module module = moduleService.findModuleById(planCreateOrUpdateDTO.getModuleId(), userId);
+
+        T newPlan = (T) setPlanFieldsFromDTO(planCreateOrUpdateDTO, createNewPlan(), userId);
+
+        addPlanItemsFromDTO(planCreateOrUpdateDTO, newPlan);
+
         return planRepository.save(newPlan);
     }
 
@@ -60,17 +70,11 @@ public abstract class PlanService<T extends Plan, U extends PlanItem> {
 
         Module module = moduleService.findModuleById(planCreateOrUpdateDTO.getModuleId(), userId);
 
-        plan.setTitle(planCreateOrUpdateDTO.getTitle());
-        plan.setModule(module);
+        // Using the same method to set the fields from the DTO
+        setPlanFieldsFromDTO(planCreateOrUpdateDTO, plan, userId);
 
         plan.getPlanItems().clear();
-        plan.getPlanItems().addAll(planCreateOrUpdateDTO.getItems().stream().map(item -> {
-            U planItem = createNewPlanItem();
-            planItem.setTitle(item.getTitle());
-            planItem.setDescription(item.getDescription());
-            planItem.setPlan(plan);
-            return planItem;
-        }).collect(Collectors.toList()));
+        addPlanItemsFromDTO(planCreateOrUpdateDTO, plan);
 
         return planRepository.save(plan);
     }
@@ -83,9 +87,22 @@ public abstract class PlanService<T extends Plan, U extends PlanItem> {
         return planRepository.findByModuleUserId(userId);
     }
 
+    /**
+     * Hook method to prepare the final input string we send to generatePrompt(...).
+     * By default, just returns the original user input.
+     * Subclasses can override to add user-specific data or other dynamic info.
+     */
+    protected String preparePromptInput(PlanAiGenerateDTO dto, UUID userId) {
+        // Default behavior: return dto.getPrompt() unchanged
+        return dto.getPrompt();
+    }
+
     public T aiGeneratePlan(PlanAiGenerateDTO planAiGenerateDTO, UUID userId) {
         Module module = moduleService.findModuleById(planAiGenerateDTO.getModuleId(), userId);
-        String response = openAiService.getResponse(this.generatePrompt(planAiGenerateDTO.getPrompt()));
+
+        String finalInput = preparePromptInput(planAiGenerateDTO, userId);
+        String promptToSend = generatePrompt(finalInput);
+        String response = openAiService.getResponse(promptToSend);
 
         JsonNode jsonContent;
         try {
@@ -106,11 +123,19 @@ public abstract class PlanService<T extends Plan, U extends PlanItem> {
             List<U> items = new ArrayList<>();
             for (JsonNode topic : jsonContent.get("topics")) {
                 U planItem = createNewPlanItem();
+
+                // Campos básicos (presentes em todos os cenários)
                 planItem.setTitle(topic.get("title").asText());
                 planItem.setDescription(topic.get("description").asText());
+
+                // Hook method para preencher campos adicionais
+                // (por padrão, não faz nada; subclasses podem sobrescrever)
+                populatePlanItemFromJson(planItem, topic);
+
                 planItem.setPlan(studyPlan);
                 items.add(planItem);
             }
+            studyPlan.getPlanItems().addAll(items);
         } else {
             throw new OpenAIAPIError("Expected topics array in OpenAI response");
         }
@@ -118,12 +143,20 @@ public abstract class PlanService<T extends Plan, U extends PlanItem> {
         planRepository.save(studyPlan);
 
         return studyPlan;
-
     }
 
     public T findPlanById(UUID planId, UUID userId) {
         return planRepository.findByIdAndModuleUserId(planId, userId)
                 .orElseThrow(() -> new NotFoundException("Plan not found"));
+    }
+
+    /**
+     * HOOK METHOD:
+     * Permite que subclasses preencham campos adicionais sem sobrescrever todo o método.
+     */
+    protected void populatePlanItemFromJson(U planItem, JsonNode topicJson) {
+        // Padrão: não faz nada.
+        // Subclasses podem sobrescrever para lidar com campos adicionais.
     }
 
 }
